...
    "button_buy_btc" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "USD → BTC"
          }
        },
        "bn" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "USD → BTC"
...
    "button_confirm_order" : {
      "extractionState" : "extracted_with_value",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Confirm Order"
          }
        }
      }
    },
    "button_connect_lsp" : {
      "extractionState" : "extracted_with_value",
...
            "value" : "Weiter"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Continue"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Continuar"
...
            "value" : "Fertig"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Done"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Hecho"
...
            "value" : "Rechnung generieren"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Generate Invoice"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Generar Factura"
...
            "value" : "Empfangen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Receive"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Recibir"
...
    "button_sell_btc" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "BTC → USD"
          }
        },
        "bn" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "BTC → USD"
...
            "value" : "Senden"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Send"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Enviar"
...
    "confirmations_complete" : {
      "extractionState" : "extracted_with_value",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Confirmed"
          }
        }
      }
    },
    "custody_self" : {
      "extractionState" : "manual",
...
            "value" : "Rechnungsadresse"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "To"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Dirección de Factura"
...
            "value" : "On-Chain-Adresse"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Onchain Address"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Dirección On-chain"
...
            "value" : "On-Chain"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Onchain"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "On-chain"
...
    "payment_type_splice_in" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Splice In"
          }
        },
        "bn" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "স্প্লাইস ইন"
...
    "payment_type_splice_out" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Splice Out"
          }
        },
        "bn" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "স্প্লাইস আউট"
...
            "value" : "Verlauf"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "History"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Historial"
...
    "placeholder" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "0.00"
          }
        },
        "bn" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "০.০০"
...
            "value" : "lnbc1..."
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Invoice or onchain address"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "lnbc1..."
...
            "value" : "Zahlungen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Payments"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Pagos"
...
            "value" : "Start"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Home"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Inicio"
...
            "value" : "USD → BTC bestätigen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Review USD -> BTC"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Confirmar USD → BTC"
...
